Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DuplicateClass.out
DuplicateClass.java:21:8: compiler.err.duplicate.class: DuplicateClass
1 error
